# service/src/main/resources/api.yml
@@ -142,6 +142,33 @@ paths:
         422:
           $ref: '#/components/responses/UnprocessableEntity'
 
+    put:
+      summary: 'Updates a specific allocation by its id'
+      operationId: updateAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          in: path
+          description: ID of the allocation
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateAllocationDTO'
+        required: true
+      responses:
+        204:
+          description: 'Updated successfully'
+        404:
+          description: Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
     UpdateRoomDTO:
@@ -167,7 +194,7 @@ components:
               type: integer
               format: int64
 
-    CreateAllocationDTO:
+    UpdateAllocationDTO:
       type: object
       properties:
         subject:
@@ -178,13 +205,20 @@ components:
         endAt:
           type: string
           format: date-time
-        roomId:
-          type: integer
-          format: int64
-        employeeName:
-          type: string
-        employeeEmail:
-          type: string
+
+    CreateAllocationDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateAllocationDTO'
+        - type: object
+          properties:
+            roomId:
+              type: integer
+              format: int64
+            employeeName:
+              type: string
+            employeeEmail:
+              type: string
 
     AllocationDTO:
       type: object
